# Micro-Grid-Analysis

./: .gitignore  LICENSE.txt  README.md  eda.py  main.py  pyproject.toml
helpers/: clean_data.py  data_viewer.py  export_cleaned_power_dataset.py  merge.py
src/: d1_data_prep.py  d2_seasonal_patterns.py  d3_correlation_analysis.py  d4_anomaly_cleaning.py  d5_forecasting_preparation.py  d6_battery_SoC_simulation.py  d7_optimisation.py
tests/: data_report.py  eda_optim.py  eda_time_series.py  scatter_plot.py
