[project]
name = "micro-grid-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clarabel>=0.11.1",
    "cvxopt>=1.3.2",
    "cvxpy>=1.7.2",
    "glop>=0.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "numpy>=2.3.2",
    "osqp>=1.0.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.0",
    "protobuf>=6.31.1",
    "pulp>=3.2.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.1",
]
